# Jazero

./: .gitignore  README.md  docker-compose.yml  kg.dockerfile  start.sh
JDLC/: README.md
JDLC/c/: CMakeLists.txt  README.md
JDLC/c/include/: jazero.h
JDLC/c/include/connection/: address.h  request.h
JDLC/c/include/driver/: jdlc.h
JDLC/c/include/structures/: property.h  query.h  user.h
JDLC/c/include/utils/: file_utils.h
JDLC/c/src/: cmd.c  jazero.c
JDLC/c/src/connection/: address.c  request.c
JDLC/c/src/driver/: enum2str.c  jdlc.c  json_body.c  params.c
JDLC/c/src/structures/: property.c  query.c  user.c
JDLC/c/src/utils/: file_utils.c
JDLC/c/test/: json_body_test.c  params_test.c
JDLC/c/test/connection/: address_test.c  request_test.c
JDLC/c/test/structures/: property_test.c  query.json  query_test.c
JDLC/c/test/utils/: file_utils_test.c
JDLC/java/: REAME.md  pom.xml
JDLC/java/src/main/java/dk/aau/cs/dkwe/edao/: Main.java
JDLC/java/src/main/java/dk/aau/cs/dkwe/edao/connector/: DataLake.java  DataLakeService.java
JDLC/java/src/main/java/dk/aau/cs/dkwe/edao/structures/: Query.java  TableQuery.java
JDLC/java/src/test/java/structures/: TableQueryTest.java
JDLC/python/: MANIFEST  README.md  pyproject.toml  setup.py
JDLC/python/jdlc/: __init__.py  jdlc.py
communication/: pom.xml
communication/src/main/java/dk/aau/cs/dkwe/edao/jazero/communication/: Communicator.java  Response.java  ServiceCommunicator.java
communication/src/test/java/dk/aau/cs/dkwe/edao/jazero/communication/: TestServiceCommunicator.java
data-lake/: Dockerfile  pom.xml
data-lake/src/main/java/dk/aau/cs/dkwe/edao/jazero/datalake/: DataLake.java
data-lake/src/main/java/dk/aau/cs/dkwe/edao/jazero/datalake/connector/: DBDriver.java  DBDriverBatch.java  (+4 more)
data-lake/src/test/resources/tables/: table-0832-36.json  table-0844-836.json  table-0869-972.json
entity-linker/: Dockerfile  pom.xml
entity-linker/src/main/java/dk/aau/cs/dkwe/edao/jazero/entitylinker/: EntityLinker.java
entity-linker/src/test/java/dk/aau/cs/dkwe/edao/jazero/entitylinker/: EntityLinkerApplicationTests.java  EntityLinkerTest.java
hdfs/: README.md  datanode.sh  docker-compose.yml  hdfs.sh
hdfs/config/: core-site.xml  hdfs-site.xml  log4j.properties
knowledge-graph/: Dockerfile  pom.xml
knowledge-graph/neo4j/: config.properties  export.sh  import.sh  insert-links.sh  install.sh
knowledge-graph/src/main/java/dk/aau/cs/dkwe/edao/jazero/knowledgegraph/: KnowledgeGraph.java
knowledge-graph/src/test/java/dk/aau/cs/dkwe/edao/jazero/knowledgegraph/: EKGManagerTest.java
storage/: pom.xml
storage/src/main/java/dk/aau/cs/dkwe/edao/jazero/storagelayer/: StorageHandler.java
storage/src/test/java/dk/aau/cs/dkwe/edao/jazero/storagelayer/: StorageHandlerTest.java
web/: .gitignore  Dockerfile  config.json  docker-compose.yml  first_output.json  pom.xml  traefik.yml
web/nginx/: nginx.conf
web/src/main/frontend/: index.html
web/src/main/frontend/themes/search-theme/: search.css  styles.css
web/src/main/java/dk/aau/cs/dkwe/edao/jazero/web/: Main.java
web/src/main/resources/: application.properties
(+135 files in other folders)
